# ChangeLog for app-misc/calculate-install-gui
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-install-gui-2.2.3-r3 (23 Dec 2010)

  23 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.3-r2.ebuild,
  +calculate-install-gui-2.2.3-r3.ebuild:
  Change dep from calculate-install.

*calculate-install-gui-2.2.3-r2 (22 Dec 2010)

  22 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.3-r1.ebuild,
  +calculate-install-gui-2.2.3-r2.ebuild:
  Change dep from calculate-install.

*calculate-install-gui-2.2.3-r1 (22 Dec 2010)

  22 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.3.ebuild,
  +calculate-install-gui-2.2.3-r1.ebuild:
  Add depend from calculate-install 2.2.3 || 2.2.4_rc1.

*calculate-install-gui-2.2.3 (17 Dec 2010)

  17 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.0.0.ebuild,
  -calculate-install-gui-2.2.1_rc17.ebuild,
  -calculate-install-gui-2.2.2.ebuild, +calculate-install-gui-2.2.3.ebuild:
  Bump version. Remove needless ebuilds.

*calculate-install-gui-2.2.2 (15 Dec 2010)

  15 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.2.ebuild:
  Bump version.

*calculate-install-gui-2.2.1 (09 Dec 2010)

  09 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.1.ebuild:
  Bump version.

*calculate-install-gui-2.2.1_rc17 (09 Dec 2010)

  09 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.1_rc16-r1.ebuild,
  +calculate-install-gui-2.2.1_rc17.ebuild:
  Version update.

*calculate-install-gui-2.2.1_rc16 (08 Dec 2010)

  08 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.1_rc15.ebuild,
  +calculate-install-gui-2.2.1_rc16.ebuild:
  Daily update.

*calculate-install-gui-2.2.1_rc15 (03 Dec 2010)
