@@ -1,7 +1,5 @@
-DIST calculate-install-gui-2.2.1.tar.bz2 154046 RMD160 551e0cd66b447e2def0c182967811f0b02b2bb49 SHA1 3236e2173af51d9c367c488cdd6ed176bd0252d8 SHA256 dc4584cb78f4be38ffa551cd19f29bb5cfe6b8dc271b5c60827a0223a760bec7
-DIST calculate-install-gui-2.2.3.tar.bz2 154053 RMD160 058e2f64e098421d0087941edb143b8e085d163e SHA1 1e8ad242226f24705b864dab228dec40346c2e43 SHA256 a49ff948d6e156da4ca725087123837394cd4143e41880e12f5c7fda5553f10d
-EBUILD calculate-install-gui-2.2.1.ebuild 720 RMD160 91a590d4e96ff08db871ad6118a4d5b00935fb01 SHA1 177cbd83e0c17c315101dd502a16c0e17acfd3d0 SHA256 d0a6277ff2cea914911ff34d48070fd762859ce96c213d13342995ebee46f04d
-EBUILD calculate-install-gui-2.2.3-r3.ebuild 762 RMD160 8839a2ebfc3c32a01cc2cceefab0d907c51723f4 SHA1 8be19868c3be3ae130c552a0fdb1654ec84d2c27 SHA256 3f3be3b3f4cfcbaa7f4e09d833c58367133b286c86554effd8090c5484662e62
+DIST calculate-install-gui-2.2.4.tar.bz2 153927 RMD160 e3422b4056e7dd7d036997f5ececc8507d3be903 SHA1 7707b8ec701308dc044871023b4ed4c79d2754d5 SHA256 3108d7346e866680e4cf41aeb9932a31ebf233bb742d6925c3eff51f526b16ef
+EBUILD calculate-install-gui-2.2.4.ebuild 720 RMD160 18adfb09d27b622b408e63d35c5f30e662770636 SHA1 b59c71438ce3dad539996dfa8bd303ed1e110f5c SHA256 428757b6bf5e2c07532789333225b0d15658076c6fe643b57a8bd1a2a3ee856f
 EBUILD calculate-install-gui-2.2.9999.ebuild 700 RMD160 523695d636602b4c39ded773b5b28e70d169866b SHA1 31b061fd8d18bd72b0532a0da34ed516360efda5 SHA256 ec0e5c94233f4bc20aa839892d619625d560e51772f89e55a1d4c7d56501aa7a
-MISC ChangeLog 10889 RMD160 882faa301309d09116c7f830bfe1ab2399b3bf7e SHA1 fa63f8338779e8eb3434f2c09c34d1f21972e2d6 SHA256 9c7181cbfb6012f1dde23f15554be7c6679700d1b3e7620777cbc4c5d07faede
+MISC ChangeLog 11130 RMD160 01e88d049de253a204794e96ef9639bab9040e1f SHA1 7738056eaa2548a53e1737a312fccfd2425d3da9 SHA256 a7385fecc51cc4dab37b5aa410843caaeabb4d9ddd4690bc4685e131413c1285
 MISC metadata.xml 319 RMD160 c12d856d94a4bbba48275f44c4e9a0eae1ac6f21 SHA1 cddfe781ee5b88c7f5c94d7c5f03a07e61ae3336 SHA256 2a18634b4a257808c269e8c986462b316780c4f8b9a19c7c8b733fa3310a4147
