@@ -14,7 +14,7 @@ LICENSE="Apache-2.0"
 SLOT="0"
 KEYWORDS="amd64 x86"
 
-DEPEND="~sys-apps/calculate-install-2.2.1
+DEPEND="~sys-apps/calculate-install-2.2.4
 	x11-libs/qtermwidget
 	x11-libs/qt-core"
 
