@@ -2,6 +2,14 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-gui-2.2.4 (23 Dec 2010)
+
+  23 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-install-gui-2.2.1.ebuild,
+  -calculate-install-gui-2.2.3-r3.ebuild,
+  +calculate-install-gui-2.2.4.ebuild:
+  Bump version.
+
 *calculate-install-gui-2.2.3-r3 (23 Dec 2010)
 
   23 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
